@@ -1,8 +1,8 @@
 Package: gdsfmt
 Type: Package
 Title: R Interface to CoreArray Genomic Data Structure (GDS) Files
-Version: 1.23.13
-Date: 2020-04-18
+Version: 1.23.14
+Date: 2020-04-25
 Depends: R (>= 2.15.0), methods
 Suggests: parallel, digest, Matrix, RUnit, knitr, crayon, BiocGenerics
 Author: Xiuwen Zheng [aut, cre] (<https://orcid.org/0000-0002-1390-0708>),
